--- a/README
+++ b/README
@@ -8,3 +8,12 @@ commit to master to test updating of repo
 testing http access
 
 testing sn.setConfig("StrictHostKeyChecking", "no");
+
+feature A {
+}
+
+feature B {
+}
+
+feature C {
+}
