TST-1 next modification

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 added change
-one more change (new branch modification)
+one more change (new branch modification 1)
 
 add change specific for new branch
 
