--- a/README
+++ b/README
@@ -3,6 +3,8 @@ this repo is used for testing git plugin repo
 added change
 one more change (new branch modification 1211)
 
+second change for 211
+
 add change specific for new branch
 
 test updating of branch
