--- a/README
+++ b/README
@@ -38,6 +38,8 @@ TST-2 change 2
 
 TST-1 change smart commits testing
 
+Conflict changin from "my_branch" that must conflicth with "other"-branch
+
 TST-2 change 3
 
 GIT-302
