TST-1 test cutting more then 4 files by "more" link

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ this repo is used for testing git plugin repo
 added change 111
 one more change (new branch modification 1211)
 
-second change for 211
+change for 387 instead of 211
 
 add change specific for new branch
 
