TST-1 New commit message

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 this repo is used for testing git plugin repo
 
-added change
+added change 111
 one more change (new branch modification 1211)
 
 second change for 211
